fix navbar ul heigth on tablet

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ Theme Name: Empralidad - Theme
 Author: Alan Pereyra
 Author URI: https://empralidad.com.ar/alanpereyra
 Description: Empralidad - Theme es un tema integramente hecho por Alan Pereyra. Pensado para ser gestionado por personas sin ningún conocimiento de programación. Es un tema minimalista flat desing, pensado con la filosofía de menos es más. Hecho con PHP, CSS, HTML5 y Javascript.
-Version: 4.6.9
+Version: 4.7.0
 License: Attribution-NonCommercial-NoDerivatives 3.0 IGO
 License URI: https://creativecommons.org/licenses/by-nc-nd/3.0/igo/legalcode
 Text Domain: empralidad
@@ -149,6 +149,13 @@ nav.navbar.navbar-scroll a.fa.fa-shopping-cart.mr-4.fadein.show-desktop.text-whi
 		height: 0;
 		visibility: hidden;
 	}
+}
+#navbarContentMenuDiv{
+	display: flex;
+}
+#navbarContentMenuDiv ul.navbar-nav{
+	max-height: 60px;
+	overflow: hidden;
 }
 @media(max-height:726px){
 	.mobile-menu-items{
